# strava_activity_map

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
data/: A la casa de la Karin__20210628.csv  A mi casa __20220521.csv  Activa Run 5k__20241020.csv  Bicicleta por la tarde__20220515.csv  Caminata Hanga Roa__20230423.csv  Caminata Volcán Rapa Nui__20230422.csv  Camino a Buin__20220605.csv  Cascada Cajón Maipo__20240106.csv  Cerro San Cristobal__20230521.csv  Chillán Run__20240809.csv  Corrida Colo Colo 2k__20240901.csv  Corrida Colo Colo 7k__20240901.csv  Corrida de las Flores - 10K__20241215.csv  Cueva Rapa Nui__20230426.csv  Cueva Vírgenes Rapa Nui__20230424.csv  Estaciones 2024 - Verano 10k__20250112.csv  Estero Huaquen Run__20240817.csv  Gobierno Santiago Running - 5k.csv  Gobierno Santiago Running - 5k__20240407.csv  Half Marathon Cerrillos - 10k__20240526.csv  Hiking Test.csv  Huaquen Run__20250214.csv  Lagunilla Hiking Bajada.csv  Lagunilla Hiking Bajada__20240803.csv  Lagunilla Hiking Subida__20240803.csv  Lagunilla Snowboard__20240907.csv  MELI Bici San Cristóbal__20250202.csv  Media Vizcacha__20220629.csv  Media Vizcacha__20220703.csv  Media Vizcachas__20230430.csv  Mitad de Media Vizcachas__20230513.csv  Nunoa Run 5K__20241125.csv  Nunoa Run 5k__20240920.csv  PO 12k__20250304.csv  Pasarela San Cristóbal__20231124.csv  Peñalolén Run.csv  Peñalolén Run__20240707.csv  Pirque - Vizcachas__20230506.csv  Puente Alto Run__20240416.csv  Puente Alto Run__20240422.csv  (+22 more)
notebooks/: download_strava_activities.ipynb  get_strava_activities.ipynb  (+1 more)
(+10 files in other folders)
